feat: improve home screen styling

--- a/frontend/src/components/OptionTable.css
+++ b/frontend/src/components/OptionTable.css
@@ -1,6 +1,10 @@
-#moreLink{
-    color: #696969;
+#moreLink {
+  color: #696969;
 }
-#moreLink :hover{
-    color: #047cfc;
+#moreLink :hover {
+  color: #047cfc;
+}
+
+.MuiTableRow-root:hover {
+  background-color: inherit !important;
 }
